# machine_learning_pipeline

./: README.md  file.csv  waheb_shiny_map.html
code/models/: code.ipynb  eda.ipynb  eda_cat.ipynb  eda_num.ipynb  interface.py  main.py  model.ipynb  model.py  run.py
code/models/modules/diabetes/: eda.ipynb
code/models/modules/old/: eda_num.ipynb  interface.py  main.py  model.ipynb  run.py
code/shiny/: app.py  app2.py  waheb_shiny_map.html
diabetes/: data_man.ipynb  eda.ipynb  fast_growing.json
diabetes/api/: api.py  logitic.pkl  logitic1.pkl
diabetes/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
diabetes/catboost_info/learn/: events.out.tfevents
ml_pipeline/: README.md  pyproject.toml
ml_pipeline/api/: pyproject.toml
ml_pipeline/api/api/: api.py  random_new.pkl  scaling_outliers.py
ml_pipeline/app/: pyproject.toml
ml_pipeline/app/app/: app.py
ml_pipeline/data/: pyproject.toml  sql.py
ml_pipeline/data/data/: diabetes.csv  diabetes_missing_values.csv
ml_pipeline/utils/: pyproject.toml
ml_pipeline/utils/utils/: eda.py  models_v1.py  outliers.py  scaling.py  scaling_outliers.py
ml_pipeline/utils/utils/encoding_analysis/: custom_encoding_summary.csv
ml_pipeline/utils/utils/scaling_analysis/: scaling_summary.csv
