[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["waheb <hocineabdelouaheb@yahoo.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
