[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["waheb <hocineabdelouaheb@yahoo.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
