[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["waheb <hocineabdelouaheb@yahoo.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
